third_party/rust/cxx/v1/crate/tests/ui/lifetime_extern_cxx.stderr
error: extern C++ function with lifetimes must be declared in `unsafe extern "C++"` block
 --> $DIR/lifetime_extern_cxx.rs:5:9
  |
5 |         unsafe fn f<'a>(&'a self, arg: &str) -> &'a str;
  |         ^^^^^^^^^^^^^^^
